[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/game/characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/dynamic/character_gui.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprite_frames/villager.tres" type="SpriteFrames" id=3]
[ext_resource path="res://src/game/characters/NPC.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sfx/game/fork_stab.wav" type="AudioStream" id=5]
[ext_resource path="res://ndh-assets/characters/villager/alerted.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/sfx/game/villager_alert_enter.wav" type="AudioStream" id=7]
[ext_resource path="res://ndh-assets/characters/villager/vigilant.png" type="Texture" id=8]
[ext_resource path="res://src/UI/SabotageBar.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.866667, 0.827451, 0.368627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 5, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 5, 0, 5, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 10, 0, 5, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 15, 0, 5, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 13, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 26, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 39, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 52, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 65, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 78, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 91, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 104, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 117, 0, 13, 21 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 130, 0, 13, 21 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "alert",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "suspicious",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 50.0

[node name="NPC" instance=ExtResource( 1 )]
collision_layer = 162
collision_mask = 2147483656
script = ExtResource( 4 )
_on_damaged_noise = 250.0

[node name="GUI" parent="." index="0"]
rect_scale = Vector2( 0.5, 0.5 )

[node name="AboveHead" parent="GUI" index="0"]
margin_top = -88.2681
margin_bottom = -60.2681
custom_constants/separation = 2

[node name="_expander" parent="GUI/AboveHead" index="0"]
margin_bottom = 27.0

[node name="HPBar" parent="GUI/AboveHead" index="1"]
visible = false
margin_top = 13.0
margin_right = 32.0
margin_bottom = 19.0
rect_min_size = Vector2( 32, 6 )
size_flags_horizontal = 4

[node name="AlertnessBar" type="ProgressBar" parent="GUI/AboveHead" index="2"]
visible = false
margin_top = 10.0
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 6 )
size_flags_horizontal = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
value = 0.5
percent_visible = false

[node name="NameLabel" parent="GUI/AboveHead" index="3"]
visible = false
margin_top = 18.0
margin_bottom = 27.0

[node name="StateLabel" type="Label" parent="GUI/AboveHead" index="4"]
visible = false
margin_top = 18.0
margin_right = 32.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "<s>"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetLabel" type="Label" parent="GUI/AboveHead" index="5"]
visible = false
margin_top = 18.0
margin_right = 29.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "<s>"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertnessIcon" type="AnimatedSprite" parent="." index="1"]
position = Vector2( 0, -45.6586 )
frames = SubResource( 18 )
animation = "suspicious"
frame = 7
playing = true

[node name="Tween" type="Tween" parent="AlertnessIcon" index="0"]

[node name="AnimatedSprite" parent="." index="2"]
scale = Vector2( 1, 1 )
frames = ExtResource( 3 )
animation = "walk_with_wood_se"
frame = 6
playing = true
offset = Vector2( 0, -12 )

[node name="AttackRange" parent="." index="5"]
monitorable = true
collision_mask = 84

[node name="SeeRange" parent="." index="6"]
visible = true
input_pickable = false
monitorable = true
collision_mask = 660

[node name="VisionCone" parent="SeeRange" index="1"]
polygon = PoolVector2Array( 0, 0, 35.75, -33.75, 35.25, 31 )

[node name="SabotageDetectRange" type="Area2D" parent="." index="10"]
visible = false
collision_layer = 2147483648
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SabotageDetectRange" index="0"]
shape = SubResource( 19 )

[node name="LineOfSightRay" parent="." index="11"]
collision_mask = 8708

[node name="Attack" parent="SFX" index="0"]
stream = ExtResource( 5 )

[node name="AlertEnter" type="AudioStreamPlayer2D" parent="SFX" index="2"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="SabotageGUI" parent="." index="18" instance=ExtResource( 9 )]
position = Vector2( 0.44545, -35.1905 )

[node name="ProgressBar" parent="SabotageGUI" index="0"]
visible = false

[editable path="SabotageGUI"]
